Converting basic React components to JSX

--- a/public/index.html
+++ b/public/index.html
@@ -97,116 +97,6 @@
         </main>
         <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-        <script>
-            'use strict';
-
-            const e = React.createElement;
-
-            class App extends React.Component {
-                constructor(props) {
-                    super(props);
-                    this.state = {
-                        errorMessage: '',
-                        isFetching: false,
-                        limit: '',
-                        medianPrimes: []
-                    };
-                }
-
-                handleLimitChange(event) {
-                    this.setState({ limit: event.target.value });
-                }
-
-                handleSubmit(event) {
-                    event.preventDefault();
-
-                    this.setState({
-                        errorMessage: '',
-                        isFetching: true,
-                        limit: this.state.limit,
-                        medianPrimes: []
-                    });
-
-                    fetch(`/api?limit=${this.state.limit}`, {
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        method: 'get'
-                    })
-                    .then(response => {
-                        if (!response.ok) {
-                            return response.json()
-                                .then(error => Promise.reject(error));
-                        }
-                        return response.json();
-                    })
-                    .then(medianPrimes => {
-                        this.setState({
-                            isFetching: false,
-                            medianPrimes
-                        });
-                    })
-                    .catch(error => {
-                        this.setState({
-                            isFetching: false,
-                            errorMessage: error.message
-                        });
-                    });
-                }
-
-                renderResult() {
-                    if (this.state.errorMessage) {
-                        return e('p', { className: 'error' }, this.state.errorMessage);
-                    }
-
-                    let message = null;
-
-                    if (this.state.isFetching) {
-                        message = 'Fetching...';
-                    }
-                    else if (this.state.medianPrimes.length > 1) {
-                        message = `The median primes of ${this.state.limit} are ${this.state.medianPrimes.join(' and ')}.`;
-                    }
-                    else if (this.state.medianPrimes.length === 1) {
-                        message = `The median prime of ${this.state.limit} is ${this.state.medianPrimes[0]}.`;
-                    }
-
-                    return message ? e('p', { className: 'result' }, message) : null;
-                }
-
-                render() {
-                    return e(
-                        'div',
-                        {},
-                        e('h1', {}, 'TouchBistro Challenge AppFoo Bar Baz'),
-                        e(
-                            'form',
-                            {
-                                onSubmit: event => this.handleSubmit(event)
-                            },
-                            e('label', { htmlFor: 'Limit' }, 'Enter a limit to get its median prime(s):'),
-                            e(
-                                'div',
-                                { className: 'input-wrapper'},
-                                e(
-                                    'input',
-                                    {
-                                        id: 'Limit',
-                                        onChange: event => this.handleLimitChange(event),
-                                        placeholder: 'Limit',
-                                        type: 'number',
-                                        value: this.state.limit
-                                    }
-                                ),
-                                e('button', { type: 'Submit' }, 'GET')
-                            )
-                        ),
-                        this.renderResult()
-                    );
-                }
-            }
-
-            ReactDOM.render(e(App), document.getElementById('App'));
-        </script>
+        <script src="/js/app.js"></script>
     </body>
 </html>
