--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,6 @@
         <main>
             <section class="container" id="App"></section>
         </main>
-        <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-        <script src="/js/app.js"></script>
+        <script src="/js/app.bundle.js"></script>
     </body>
 </html>
